--- a/Delhi House Price Prediction/Delhi House Price Prediction.ipynb
+++ b/Delhi House Price Prediction/Delhi House Price Prediction.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -154,34 +154,119 @@
        "      <td>Builder_Floor</td>\n",
        "      <td>6667.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1300.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Semi-Furnished</td>\n",
+       "      <td>Rohini Sector 24</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>15500000</td>\n",
+       "      <td>Ready_to_move</td>\n",
+       "      <td>New_Property</td>\n",
+       "      <td>Builder_Floor</td>\n",
+       "      <td>6667.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1350.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Semi-Furnished</td>\n",
+       "      <td>Rohini Sector 24</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10000000</td>\n",
+       "      <td>Ready_to_move</td>\n",
+       "      <td>Resale</td>\n",
+       "      <td>Builder_Floor</td>\n",
+       "      <td>6667.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>650.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Semi-Furnished</td>\n",
+       "      <td>Delhi Homes, Rohini Sector 24</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4000000</td>\n",
+       "      <td>Ready_to_move</td>\n",
+       "      <td>New_Property</td>\n",
+       "      <td>Apartment</td>\n",
+       "      <td>6154.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>985.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Unfurnished</td>\n",
+       "      <td>Rohini Sector 21</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6800000</td>\n",
+       "      <td>Almost_ready</td>\n",
+       "      <td>New_Property</td>\n",
+       "      <td>Builder_Floor</td>\n",
+       "      <td>6154.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1300.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Semi-Furnished</td>\n",
+       "      <td>Rohini Sector 22</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>15000000</td>\n",
+       "      <td>Ready_to_move</td>\n",
+       "      <td>New_Property</td>\n",
+       "      <td>Builder_Floor</td>\n",
+       "      <td>6154.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Area  BHK  Bathroom      Furnishing   \n",
-       "0  800.0    3       2.0  Semi-Furnished  \\\n",
-       "1  750.0    2       2.0  Semi-Furnished   \n",
-       "2  950.0    2       2.0       Furnished   \n",
-       "3  600.0    2       2.0  Semi-Furnished   \n",
-       "4  650.0    2       2.0  Semi-Furnished   \n",
+       "     Area  BHK  Bathroom      Furnishing  \\\n",
+       "0   800.0    3       2.0  Semi-Furnished   \n",
+       "1   750.0    2       2.0  Semi-Furnished   \n",
+       "2   950.0    2       2.0       Furnished   \n",
+       "3   600.0    2       2.0  Semi-Furnished   \n",
+       "4   650.0    2       2.0  Semi-Furnished   \n",
+       "5  1300.0    4       3.0  Semi-Furnished   \n",
+       "6  1350.0    4       3.0  Semi-Furnished   \n",
+       "7   650.0    2       2.0  Semi-Furnished   \n",
+       "8   985.0    3       3.0     Unfurnished   \n",
+       "9  1300.0    4       4.0  Semi-Furnished   \n",
        "\n",
-       "                                            Locality  Parking     Price   \n",
-       "0                                   Rohini Sector 25      1.0   6500000  \\\n",
+       "                                            Locality  Parking     Price  \\\n",
+       "0                                   Rohini Sector 25      1.0   6500000   \n",
        "1             J R Designers Floors, Rohini Sector 24      1.0   5000000   \n",
        "2                Citizen Apartment, Rohini Sector 13      1.0  15500000   \n",
        "3                                   Rohini Sector 24      1.0   4200000   \n",
        "4  Rohini Sector 24 carpet area 650 sqft status R...      1.0   6200000   \n",
+       "5                                   Rohini Sector 24      1.0  15500000   \n",
+       "6                                   Rohini Sector 24      1.0  10000000   \n",
+       "7                      Delhi Homes, Rohini Sector 24      1.0   4000000   \n",
+       "8                                   Rohini Sector 21      1.0   6800000   \n",
+       "9                                   Rohini Sector 22      1.0  15000000   \n",
        "\n",
        "          Status   Transaction           Type  Per_Sqft  \n",
        "0  Ready_to_move  New_Property  Builder_Floor       NaN  \n",
        "1  Ready_to_move  New_Property      Apartment    6667.0  \n",
        "2  Ready_to_move        Resale      Apartment    6667.0  \n",
        "3  Ready_to_move        Resale  Builder_Floor    6667.0  \n",
-       "4  Ready_to_move  New_Property  Builder_Floor    6667.0  "
+       "4  Ready_to_move  New_Property  Builder_Floor    6667.0  \n",
+       "5  Ready_to_move  New_Property  Builder_Floor    6667.0  \n",
+       "6  Ready_to_move        Resale  Builder_Floor    6667.0  \n",
+       "7  Ready_to_move  New_Property      Apartment    6154.0  \n",
+       "8   Almost_ready  New_Property  Builder_Floor    6154.0  \n",
+       "9  Ready_to_move  New_Property  Builder_Floor    6154.0  "
       ]
      },
-     "execution_count": 357,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +274,7 @@
    "source": [
     "# Loading the dataset\n",
     "df = pd.read_csv('MagicBricks.csv')\n",
-    "df.head()"
+    "df.head(10)"
    ]
   },
   {
@@ -202,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +296,7 @@
        "(1259, 11)"
       ]
      },
-     "execution_count": 358,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +328,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 359,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +391,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 362,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +431,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 363,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +556,7 @@
        "[1259 rows x 2 columns]"
       ]
      },
-     "execution_count": 364,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
